test/no_arg.err
ERROR: line: 3, col: 5
Expected an argument before ",".
