test/no_arg.s
# Missing argument
mov r1, r2
add , r2
mov r2, r3
